<resources>
    <string name="app_name">MuseUI</string>
    <string name="action_settings">Settings</string>
    <string name="btn_comenzar">Comenzar</string>
    <string name="tv_status">Status de conexión:</string>
    <string name="tv_status_value_desconocido">Desconocido</string>
    <string name="tv_status_value_conectado">Conectado</string>
    <string name="tv_status_value_desconectado">Desconectado</string>
    <string name="accelerometer_init">0.0</string>
    <string name="btn_detener_reanudar">Detener/Reanudar</string>
    <string name="titulo_permiso">MuseUI necesita tu permiso</string>
    <string name="descripcion_permiso">MuseUI necesita algunos permisos para trabajar correctamente</string>
    <string name="btn_Aceptar_permiso">Aceptar</string>
    <string name="muse_descripcion">MuseUI es un prototipo de aplicación móvil que pretende sustituir los métodos de entrada convencionales tales como una pantalla táctil o botones físicos, a través de los cuales el usuario se comunica con el dispositivo dando lugar a la interacción humano computadora (HCI), por gestos. Dichos gestos son identificados por una headband (Muse 2016) al realizar movimientos específicos y enviados al dispositivo móvil por medio de una conexión bluetooth.</string>
    <string name="muse_objetivo">La intención de MuseUI es proponer una interfaz basada en gestos de la cabeza (Head Gesture Based Interaction) que de a los usuarios con discapacidad motora una opción para interactuar con sus dispositivos.</string>
    <string name="muse_desarrollador">Desarrollador: Arturo Eduardo Gómez Macías</string>
    <string name="muse_correo">Correo: artuedu@gmail.com</string>
    <string name="muse_version">MuseUI v2 --/--/----</string>
</resources>
