<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infoActivity"
    android:background="@drawable/fondo3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/infologo"
                android:layout_width="200dp"
                android:layout_height="109dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/muse_descripcion"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="@color/colorGrayDark"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/muse_objetivo"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="@color/colorGrayDark"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/img_uaa"
                android:layout_width="wrap_content"
                android:layout_height="109dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/uaa" />

            <TextView
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/muse_desarrollador"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textColor="@color/colorGrayDark"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/muse_correo"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textColor="@color/colorGrayDark"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/muse_version"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="@color/colorGrayDark"
                android:background="@color/colorPrimary"
                android:gravity="center"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>